prevent overlapping of divs when window is resized

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,26 +1,34 @@
 body {
    background-color: black;
+   overflow: hidden;
+   width: 100%;
 }
 
 #filter-column {
    float: left;
    height: auto;
-   width: 20%;
    white-space: nowrap;
    font-family: sans-serif;
    padding-top: 8px;
+   margin-right: 16px;
 }
 
 #filter-column label {
    color: #c0c5ce;
-   padding-right: 16px;
    margin-left: 8px;
+   vertical-align: middle;
 }
 
 #filter-column input {
    width: auto;
    background-color: #c0c5ce;
    font-size: 14px;
+   display: block;
+   float: right;
+}
+
+#filter-row {
+
 }
 
 #location-list {
@@ -41,5 +49,5 @@ li:nth-child(even) {
 
 #map {
    height: 600px;
-   width: 80%;
+   display: block;
 }
